<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="320dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/label_nova_compra"
        android:textColor="@color/green"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/formulario_compra_layout_nome"
        app:layout_constraintStart_toStartOf="@+id/formulario_compra_layout_nome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formulario_compra_layout_nome"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/formulario_compra_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nome_compra" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formulario_compra_layout_loja"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="@+id/formulario_compra_layout_nome"
        app:layout_constraintTop_toBottomOf="@+id/formulario_compra_layout_nome">

        <!--        <com.vicmikhailau.maskededittext.MaskedEditText
                    android:id="@+id/formulario_compra_data"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/hint_data_compra"
                    app:mask="##/##/####"
                    android:inputType="date"/>-->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/formulario_compra_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_data_compra"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/formulario_compra_mensagem_erro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_nome_vazio"
        android:textColor="@android:color/holo_red_light"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/formulario_compra_layout_nome"
        app:layout_constraintTop_toBottomOf="@id/formulario_compra_layout_nome" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensagem_data_branco"
        app:layout_constraintBottom_toTopOf="@+id/formulario_compra_layout_loja"
        app:layout_constraintStart_toStartOf="@+id/formulario_compra_layout_loja" />

    <Button
        android:id="@+id/formulario_compra_btn_confirma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_btn_ok"
        app:layout_constraintStart_toStartOf="@+id/formulario_compra_layout_loja"
        app:layout_constraintTop_toBottomOf="@+id/formulario_compra_layout_loja" />

    <Button
        android:id="@+id/formulario_compra_btn_cancela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/gray"
        android:text="@string/label_btn_cancelar"
        app:layout_constraintBottom_toBottomOf="@+id/formulario_compra_btn_confirma"
        app:layout_constraintStart_toEndOf="@+id/formulario_compra_btn_confirma" />

</androidx.constraintlayout.widget.ConstraintLayout>