<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/lista_produto_include"
        layout="@layout/custom_appbar_pesquisa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/list_view_produtos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lista_produto_include"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_adiciona_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="72dp"
        android:clickable="true"
        android:contentDescription="@string/descricao_fab_novo_produto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/sumario_compras"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lista_produto_valor_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/lista_produto_quantidade"
        app:layout_constraintStart_toStartOf="@id/lista_produto_title_itens"
        tools:text="R$ 20,00" />

    <TextView
        android:id="@+id/lista_produto_title_itens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/label_item_produto"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lista_produto_quantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@id/lista_produto_title_itens"
        app:layout_constraintStart_toEndOf="@id/lista_produto_title_itens"
        tools:text="0" />

    <TextView
        android:id="@+id/mensagem_lista_vazia_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nenhum produto adicionado."
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>